k8s/auth-test-spa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-test-spa-ui
  namespace: auth-test-spa-ns
  labels:
    app: auth-test-spa-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: auth-test-spa-ui
